--- a/source/stylesheets/_syntax.scss.erb
+++ b/source/stylesheets/_syntax.scss.erb
@@ -25,3 +25,6 @@ under the License.
 .highlight, .highlight .w {
   background-color: $code-bg;
 }
+pre.highlight code .w {
+    background-color: #fff;
+}
