--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -16,87 +16,95 @@ under the License.
 <% language_tabs = current_page.data.language_tabs %>
 <!doctype html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title><%= current_page.data.title || "API Documentation" %></title>
-
-    <%= stylesheet_link_tag :screen, media: :screen %>
-    <%= stylesheet_link_tag :print, media: :print %>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <% if current_page.data.search %>
-      <%= javascript_include_tag  "all" %>
-    <% else %>
-      <%= javascript_include_tag  "all_nosearch" %>
-    <% end %>
-
-    <% if language_tabs %>
-      <script>
-        $(function() {
-          setupLanguages(<%= language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>);
-        });
-      </script>
-    <% end %>
-  </head>
-
-  <body class="<%= page_classes %>">
-    <a href="#" id="nav-button">
-      <span>
-        NAV
-        <%= image_tag('navbar.png') %>
-      </span>
-    </a>
-    <div class="tocify-wrapper">
-      <%= image_tag "logo.png" %>
-      <% if language_tabs %>
-        <div class="lang-selector">
-          <% language_tabs.each do |lang| %>
-            <% if lang.is_a? Hash %>
-              <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
-            <% else %>
-              <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
-            <% end %>
-          <% end %>
-        </div>
-      <% end %>
-      <% if current_page.data.search %>
-        <div class="search">
-          <input type="text" class="search" id="input-search" placeholder="Search">
-        </div>
-        <ul class="search-results"></ul>
-      <% end %>
-      <div id="toc">
-      </div>
-      <% if current_page.data.toc_footers %>
-        <ul class="toc-footer">
-          <% current_page.data.toc_footers.each do |footer| %>
-            <li><%= footer %></li>
-          <% end %>
-        </ul>
-      <% end %>
-    </div>
-    <div class="page-wrapper">
-      <div class="dark-box"></div>
-      <div class="content">
-        <%= yield %>
-        <% current_page.data.includes && current_page.data.includes.each do |include| %>
-          <%= partial "includes/#{include}" %>
+    <head>
+        <meta charset="utf-8">
+        <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <title><%= current_page.data.title || "API Documentation" %></title>
+        <link rel="stylesheet" href="/components/bootstrap/css/bootstrap.min.css">
+        <%= stylesheet_link_tag :screen, media: :screen %>
+        <%= stylesheet_link_tag :print, media: :print %>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <% if current_page.data.search %>
+          <%= javascript_include_tag  "all" %>
+        <% else %>
+          <%= javascript_include_tag  "all_nosearch" %>
         <% end %>
-      </div>
-      <div class="dark-box">
+
         <% if language_tabs %>
-          <div class="lang-selector">
-            <% language_tabs.each do |lang| %>
-              <% if lang.is_a? Hash %>
-                <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
-              <% else %>
-                <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
-              <% end %>
-            <% end %>
-          </div>
+            <script>
+                $(function() {
+                  setupLanguages(<%= language_tabs.map{ |lang| lang.is_a?(Hash) ? lang.keys.first : lang }.to_json %>);
+                });
+            </script>
         <% end %>
-      </div>
-    </div>
-  </body>
+    </head>
+
+    <body class="<%= page_classes %>">
+        <div class="container">
+            <div class="row">
+                <a href="#" id="nav-button">
+                  <span>
+                    NAV
+                    <%= image_tag('navbar.png') %>
+                  </span>
+                </a>
+                <div class="col-md-3 col-sm-3 col-xs-3 sidebar-left">
+                    <div class="tocify-wrapper test">
+                      <%# = image_tag "logo.png" %>
+                      <% if language_tabs %>
+                        <div class="lang-selector">
+                          <% language_tabs.each do |lang| %>
+                            <% if lang.is_a? Hash %>
+                              <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
+                            <% else %>
+                              <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
+                            <% end %>
+                          <% end %>
+                        </div>
+                      <% end %>
+                      <% if current_page.data.search %>
+                        <div class="search">
+                          <input type="text" class="search" id="input-search" placeholder="Search">
+                        </div>
+                        <ul class="search-results"></ul>
+                      <% end %>
+                      <div id="toc">
+                      </div>
+                      <% if current_page.data.toc_footers %>
+                        <ul class="toc-footer">
+                          <% current_page.data.toc_footers.each do |footer| %>
+                            <li><%= footer %></li>
+                          <% end %>
+                        </ul>
+                      <% end %>
+                    </div>
+                </div>
+                <div class="col-md-9 col-sm-9 col-xs-12">
+                    <div class="page-wrapper">
+                        <div class="dark-box"></div>
+                        <div class="content">
+                            <%= yield %>
+                            <% current_page.data.includes && current_page.data.includes.each do |include| %>
+                              <%= partial "includes/#{include}" %>
+                            <% end %>
+                        </div>
+                        <div class="dark-box">
+                            <% if language_tabs %>
+                              <div class="lang-selector">
+                                <% language_tabs.each do |lang| %>
+                                  <% if lang.is_a? Hash %>
+                                    <a href="#" data-language-name="<%= lang.keys.first %>"><%= lang.values.first %></a>
+                                  <% else %>
+                                    <a href="#" data-language-name="<%= lang %>"><%= lang %></a>
+                                  <% end %>
+                                <% end %>
+                              </div>
+                            <% end %>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
